# social-web-service

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
assets/windows-test/: README.md
migrations/2024-03-04-203900_create_user/: up.sql
migrations/2024-07-15-173656_create_posts/: down.sql  up.sql
src/: auth.rs  health.rs  lib.rs  main.rs  models.rs  open_api_docs.rs  posts.rs  schema.rs  server.rs  users.rs
src/auth/: controller.rs  handler.rs  schema.rs
src/common/api/: response.rs
src/posts/: controller.rs  handler.rs  models.rs  schema.rs
src/users/: controller.rs  handler.rs  models.rs  schema.rs
tests/: auth.rs  health.rs  posts.rs  users.rs
