[package]
name = "social-web-service"
version = "0.1.0"
edition = "2021"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
diesel =  { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
serde = "1.0.197"
serde_json = "1.0.114"
utoipa = "3"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
validator = { version = "0.12", features = ["derive"] }

# [target.x86_64-pc-windows-msvc.pq]
# rustc-link-search = ["C:\\Program Files\\PostgreSQL\\12\\lib"]
# rustc-link-lib = ["libpq"]
